--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
         
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/qz0aGYrrlhU?si=w_1nBYcseDNsDlXF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
              </div>
-             <!-- my target -->
               <div class="inspiration">
                 <h1>My Current Target</h1>
                 <p>Master responsive design and create visually engaging, user-friendly web interfaces with clean, efficient code.</p>
@@ -121,7 +120,7 @@
                     <nav>
                     <ul>
                         <input type="text" name="" placeholder="Suggest me any feedback for me" class="input-text">
-                        <!-- <li> <a href=""> <button class="btn-part-last" >Suggest me any feedback for me</button></a></li> -->
+    
                         <li><a href=""><button class="submit-part">Submit</button></a></li>
                     </ul>
                     </nav>
@@ -136,8 +135,8 @@
         </div>
         <div>
             <a href="https://www.facebook.com/" target="_blank"><img src="assets/facebook.png" alt=""></a>
-            <a href="https://github.com/Tachikulislam" target="_blank"><img src="assets/github.png" alt=""></a>
-            <a href="https://www.linkedin.com/checkpoint/lg/login?session_redirect=%2Fauthwall&fromSignIn=true&trk=seo-authwall-base_google-one-tap-submit" target="_blank"><img src="assets/linkedin-icon 1.png" alt=""></a>  
+            <a href="https://github.com" target="_blank"><img src="assets/github.png" alt=""></a>
+            <a href="https://www.linkedin.com/" target="_blank"><img src="assets/linkedin-icon 1.png" alt=""></a>  
         </div>
     </footer>
 </body>
