--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               </div>
         </section>
     </main>
-   
+    <footer id="footer-setion" class="footer-side">
         <div>
             <h3>An Open Commitment by Nahid</h3>
         </div>
