--- a/index.html
+++ b/index.html
@@ -79,11 +79,9 @@
                 <div class="div-section-1">
                     <img src="assets/html.png" alt="">
                     <h1>HTML</h1>
-                    <p>HTML is the standard markup language for Web pages.
-
+                    <p>HTML is the standard markup language for Web pages
                         With HTML you can create your own Website.
-                        
-                        HTML is easy to learn - You will enjoy it!</p>
+                        </p>
                     <a class="dark-1" href="learn more">Learn More</a>
                 </div>
 
