--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="third-box-1">
                     <h1>I will help People by creating Modern Web System</h1>
-                    <p>Web Development today has become more complex than just HTML, CSS, and Vanilla JS. With Frameworks like React, Angular we can make highly scalable web apps and add more complexity to our front-end side.</p>
+                    <p>Web Development today has become more complex than just HTML, CSS, and Vanilla JS. With Frameworks like React, Angular we can make highly scalable web apps and add more complexity</p>
                     <button class="sec-box-btn" type="submit">Learn More</button>
                 </div>
             </div>
